nvidia-graphics-drivers (460.32.03-2) UNRELEASED; urgency=medium

  * nvidia-detect: Add support for Tesla 460 drivers.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 25 Jan 2021 15:43:22 +0100

nvidia-graphics-drivers (460.32.03-1) unstable; urgency=medium

  * New upstream production branch release 460.32.03 (2021-01-07).
    * Fixed CVE-2021-1052, CVE-2021-1053, CVE-2021-1056.  (Closes: #979670)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5142
    - Added a new "NoInterlacedModes" token to the NVIDIA X driver's
      "ModeValidation" option, to allow preventing interlaced modes from
      being validated. Refer to the "X Config Options" appendix of the
      driver README for further details.
    - Added support for the following GPU: A40.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Refresh patches.
  * Update symbols files.
  * Upload to unstable.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 15 Jan 2021 00:23:35 +0100

nvidia-graphics-drivers (460.27.04-1) experimental; urgency=medium

  * New upstream beta 460.27.04 (2020-12-15).
    - Fixed a bug that could cause detailed timing information for displays
      with a large number of detailed timings to be truncated in the X log.
    - Fixed a bug that prevented scaled display resolutions configured via
      the nvidia-settings control panel from being reported by RandR.
    - Added support for the following GPUs: GeForce RTX 3060 Ti, RTX A6000.
    - Added support for RandR rotation and reflection while using an
      NVIDIA-driven display as a PRIME Display Offload sink.
    - Added support for "Reverse PRIME Bypass", an optimization that bypasses
      the bandwidth overhead of PRIME Render Offload and PRIME Display Offload
      in conditions where a render offload application is fullscreen,
      unredirected, and visible only on a given NVIDIA-driven PRIME Display
      Offload output. Use of the optimization is reported in the X log when