@@ -126,29 +126,7 @@ fi
 		echo "Uh oh. You are running Wheezy, which is no longer supported."
 	elif grep -q "jessie\|^8" /etc/debian_version
 	then
-		if [[ -n ${VERSIONS[340]} ]]; then
-			if [[ -n ${VERSIONS[304]} ]]; then
-				echo "Your card is supported by the default drivers and legacy driver series 304."
-			else
-				echo "Your card is supported by the default drivers."
-			fi
-			PACKAGE="nvidia-driver"
-		elif [[ -n ${VERSIONS[999]} ]]; then
-			echo "Your card is only supported by the updated drivers from jessie-backports."
-			echo "See https://backports.debian.org for instructions how to use backports."
-			PACKAGE="nvidia-driver/jessie-backports"
-		elif [[ -n ${VERSIONS[304]} ]]; then
-			echo "Your card is only supported up to the 304 legacy drivers series."
-			PACKAGE="nvidia-legacy-304xx-driver"
-		elif [[ -n ${VERSIONS[173]} ]]; then
-			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
-		elif [[ -n ${VERSIONS[96]} ]]; then
-			echo "Uh oh. Your card is only supported by the 96.43 legacy drivers series, which is not in any current Debian suite."
-		elif [[ -n ${VERSIONS[71]} ]]; then
-			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
-		else
-			echo "Oops. Internal error 8 ($NVGA)"
-		fi
+		echo "Uh oh. You are running Jessie, which is no longer supported."
 	elif grep -q "stretch\|^9" /etc/debian_version
 	then
 		if [[ -n ${VERSIONS[390]} ]]; then
